--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".JobDetail"></activity>
+        <activity android:name=".ProfileDetailActivity"></activity>
+        <activity android:name=".JobDetail" />
         <activity android:name=".ProfileMenu" />
         <activity android:name=".Menu" />
         <activity android:name=".Registration" />
