--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProfileDetailActivity"></activity>
+        <activity android:name=".SelectCategory"></activity>
+        <activity android:name=".AddJob" />
+        <activity android:name=".ProfileDetailActivity" />
         <activity android:name=".JobDetail" />
         <activity android:name=".ProfileMenu" />
         <activity android:name=".Menu" />
