--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SelectCategory"></activity>
+        <activity android:name=".SelectCategory"/>
+        <activity android:name=".MyJobs"/>
         <activity android:name=".AddJob" />
         <activity android:name=".ProfileDetailActivity" />
         <activity android:name=".JobDetail" />
